--- a/a4.html
+++ b/a4.html
@@ -6,6 +6,7 @@
   <meta name="description" content="這是110570043，周欣穎的作業11。" />
   <meta name="keywords" content="周欣穎，110570043，作業11，有各種CSS" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta name="google-site-verification" content="s4L51DST4Qh712EwbbmxGDzyIBlKtvFsua62YS5jexI" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <link rel="stylesheet" type="text/css" href="mystyle.css" />
   <script type="text/javascript" src="js/jquery.min.js"></script>
