--- a/a5.html
+++ b/a5.html
@@ -8,6 +8,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="google-site-verification" content="s4L51DST4Qh712EwbbmxGDzyIBlKtvFsua62YS5jexI" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="mystyle.css" />
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/jquery.easing.min.js"></script>
   <script type="text/javascript" src="js/jquery.lavalamp.min.js"></script>
@@ -60,7 +61,39 @@
 	  </div><!--close banner_image-->			  
       <div id="content">
         <div class="content_item">
-          <h1>Welcome to your website</h1>
+          <h1>GSC圖片</h1>
+          <hr>
+          <p>
+          <img src="images/GSC-1.png" width="80%">
+          <br>
+          <h2 class="s4">圖1：網站認證</h2>
+          </p>
+
+          <p>
+            <img src="images/GSC-2.png" width="80%">
+            <br>
+            <h2 class="s4" >圖2：sitemap認證</h2>
+            </p>
+
+            <p>
+              <img src="images/GSC-3.png" width="80%">
+              <br>
+              <h2 class="s4" >圖3：網址審查</h2>
+              </p>
+
+              <p>
+                <img src="images/GSC-4.png" width="80%">
+                <br>
+                <h2 class="s4" >圖4：SEO的TDK設定</h2>
+                </p>
+
+
+
+
+
+
+
+
           <p>This standards compliant, simple, fixed width website template is released as an 'open source' design (under the Creative Commons Attribution 3.0 Licence), which means that you are free to download and use it for anything you want (including modifying and amending it). If you wish to remove the 'ARaynorDesign' link in the footer of the template, please contact me first, but other than that...</p>
           <h3>Place your heading here</h3>
           <div style="width:200px; float:left; padding: 0px 20px 10px 0px;"><img alt="image" src="images/image.jpg" /></div>
