--- a/a5.html
+++ b/a5.html
@@ -27,6 +27,18 @@
     });
     </script>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WD5XLC7CXP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WD5XLC7CXP');
+</script>
+
+
+
 </head>
 
 <body>
