--- a/a6.html
+++ b/a6.html
@@ -75,7 +75,7 @@
           <h1 class="s1">GA圖片</h1>
           <hr>
           <br>
-          <h1 class="s2"><a href="https://www.newebpay.com/website/Page/content/service_creditcard"  target="_blank" >下單購買(使用藍新金流NewebPay)</a></h1>
+          <a class="s2" href="https://www.newebpay.com/website/Page/content/service_creditcard"  target="_blank" >下單購買(使用藍新金流NewebPay)</a>
           <p>
           <img src="images/GA-1.png" width="80%">
           <br>
@@ -85,11 +85,12 @@
           <p>
             <img src="images/GA-2.png" width="80%">
             <br>
-            <h2 class="s4">圖2：
-              page_view (頁面瀏覽)=9：瀏覽9次
-              user_engagement (用戶互動)=7：有7次使用者互動(停留超過10秒，或由A網頁切換到B網頁)。它反映了使用者在網站上的參與情況
-              first_visit (首次訪問)=1：有一位新使用者首次造訪網站，它反映了新用戶的增加情況
-              session_start (拜訪開始)：每次使用者訪問網站時自動觸發這個事件，標誌著一次新的訪問開始。如果使用者在30分鐘內沒進行操作GA會自動認為這次會話結束。這個事件可以用來追蹤總訪問量</h2>
+            <h2 class="s4">圖2： <br>
+              page_view (頁面瀏覽)=62：瀏62次 <br>
+              user_engagement (用戶互動)=43：有43次使用者互動(停留超過10秒，或由A網頁切換到B網頁)。它反映了使用者在網站上的參與情況 <br>
+              first_visit (首次訪問)=4：有四位新使用者首次造訪網站，它反映了新用戶的增加情況 <br>
+              session_start (拜訪開始)：每次使用者訪問網站時自動觸發這個事件，標誌著一次新的訪問開始。如果使用者在30分鐘內沒進行操作GA會自動認為這次會話結束。這個事件可以用來追蹤總訪問量
+            </h2>
             </p>
 
             <p>
