--- a/a6.html
+++ b/a6.html
@@ -76,8 +76,7 @@
           <hr>
           <br>
           <a class="s2" href="https://www.newebpay.com/website/Page/content/service_creditcard"  target="_blank" >下單購買(使用藍新金流NewebPay)</a>
-          <br>
-	<p>
+          <p>
           <img src="images/GA-1.png" width="80%">
           <br>
           <h2 class="s4">圖1：活躍使用者人數 (Active Users)：有多少「不同USER ID的使用者」</h2>
@@ -105,6 +104,18 @@
                 <br>
                 <h2 class="s4">圖4：GA4的重要轉換事件(Important Event， Conversion)</h2>
                 </p>
+
+                <p>
+                  <img src="images/T-1.png" width="80%">
+                  <br>
+                  <h2 class="s4">圖5：Google Tag Assistant的點擊事件</h2>
+                  </p>
+
+                  <p>
+                    <img src="images/T-2.png" width="80%">
+                    <br>
+                    <h2 class="s4">圖6：Google Tag Assistant的自訂事件</h2>
+                    </p>
 
             
 
