--- a/a6.html
+++ b/a6.html
@@ -86,10 +86,10 @@
             <img src="images/GA-2.png" width="80%">
             <br>
             <h2 class="s4">圖2： <br>
-              page_view (頁面瀏覽)=62：瀏覽62次 <br>
-              user_engagement (用戶互動)=43：有43次使用者互動(停留超過10秒，或由A網頁切換到B網頁)。它反映了使用者在網站上的參與情況 <br>
-              first_visit (首次訪問)=4：有四位新使用者首次造訪網站，它反映了新用戶的增加情況 <br>
-              session_start (拜訪開始)：每次使用者訪問網站時自動觸發這個事件，標誌著一次新的訪問開始。如果使用者在30分鐘內沒進行操作GA會自動認為這次會話結束。這個事件可以用來追蹤總訪問量
+              <span>page_view (頁面瀏覽)=62：瀏覽62次 </span><br>
+              <span>user_engagement (用戶互動)=43：有43次使用者互動(停留超過10秒，或由A網頁切換到B網頁)。它反映了使用者在網站上的參與情況 </span><br>
+             <span> first_visit (首次訪問)=4：有四位新使用者首次造訪網站，它反映了新用戶的增加情況 </span><br>
+             <span> session_start (拜訪開始)：每次使用者訪問網站時自動觸發這個事件，標誌著一次新的訪問開始。如果使用者在30分鐘內沒進行操作GA會自動認為這次會話結束。這個事件可以用來追蹤總訪問量</span>
             </h2>
             </p>
 
